_sass/modules/_images.scss
.img {
  display: inline-block;
}

.img--margin-top {
  margin-top: $u-space-default;
}

.img--alternate-medium {
  max-width: 500px;
}

.img--alternate-small {
  max-width: 380px;
}

.img--fade-in {
  @include animation("fadein 1s forwards");
}

.img-full-width {
  background-size: cover;
  background-position: center center;
  padding-bottom: 40%;

  @media screen and (min-width: $large-desktop-min) {
    padding-bottom: 30%;
  }
}

